tests/compilation/method_attrs.stderr
error: attribute must be used on a method with Return Position Impl Trait
 --> tests/compilation/method_attrs.rs:3:17
  |
3 |     #[dyn_utils(storage = dyn_utils::DefaultStorage)]
  |                 ^^^^^^^

error: expected `=`
 --> tests/compilation/method_attrs.rs:9:24
  |
9 |     #[dyn_utils(storage(dyn_utils::DefaultStorage))]
  |                        ^

error: expected identifier
  --> tests/compilation/method_attrs.rs:15:27
   |
15 |     #[dyn_utils(storage = ..)]
   |                           ^

error: attribute must be used on a method with Return Position Impl Trait
  --> tests/compilation/method_attrs.rs:21:17
   |
21 |     #[dyn_utils(try_sync)]
   |                 ^^^^^^^^

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:25:1
   |
25 | #[dyn_utils::dyn_compatible]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `dyn_utils::dyn_compatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:31:1
   |
31 | #[dyn_utils::dyn_compatible]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `dyn_utils::dyn_compatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `try_sync` must be used on async methods
  --> tests/compilation/method_attrs.rs:37:1
   |
37 | #[dyn_utils::dyn_compatible]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `dyn_utils::dyn_compatible` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown attribute
  --> tests/compilation/method_attrs.rs:45:17
   |
45 |     #[dyn_utils(unknown)]
   |                 ^^^^^^^

error: `dyn_utils::sync` must be used on async method
  --> tests/compilation/method_attrs.rs:55:5
   |
55 |     fn method(&self) {}
   |     ^^^^^^^^^^^^^^^^

error[E0046]: not all trait items implemented, missing: `method`
  --> tests/compilation/method_attrs.rs:53:1
   |
50 |     fn method(&self);
   |     ----------------- `method` from trait
...
53 | impl Trait for () {
   | ^^^^^^^^^^^^^^^^^ missing `method` in implementation
